--- a/backbone-demo/index.html
+++ b/backbone-demo/index.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="js/libs/underscore-min.js"></script>
 <script type="text/javascript" src="js/libs/backbone-min.js"></script>
 <script type="text/javascript" src="js/libs/handlebars-v1.3.0.js"></script>
-<script type="text/javascript" src="js/people.js"></script>
+<script type="text/javascript" src="js/person.js"></script>
 
 </body>
 </html>
