--- a/backbone-demo2/index.html
+++ b/backbone-demo2/index.html
@@ -8,11 +8,19 @@
     
 <div id="container"></div>
 
-<script id="page-template" type="text/x-handlebars-template">
-    <h2>Locations<h2>
+<script id="location-page-template" type="text/x-handlebars-template">
+    <h2>Locations</h2>
 </script>
 
 <script id="location-template" type="text/x-handlebars-template">
+    <li>{{ name }}</li>
+</script>
+
+<script id="currency-page-template" type="text/x-handlebars-template">
+    <h2>Currencies</h2>
+</script>
+
+<script id="currency-template" type="text/x-handlebars-template">
     <li>{{ name }}</li>
 </script>
     
@@ -20,7 +28,7 @@
 <script type="text/javascript" src="js/libs/underscore-min.js"></script>
 <script type="text/javascript" src="js/libs/backbone-min.js"></script>
 <script type="text/javascript" src="js/libs/handlebars-v1.3.0.js"></script>
-<script type="text/javascript" src="js/locations.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 </body>
 </html>
