--- a/backbone-demo3/js/app/widgets/Market/MarketListWidgetTemplate.html
+++ b/backbone-demo3/js/app/widgets/Market/MarketListWidgetTemplate.html
@@ -1,1 +1,1 @@
-<li>{{ name }} <a class="delete" data-id="{{ id }}" href="#">delete</a></li>
+<li>{{ name }} <a class="edit" data-id="{{ id }}" href="#">edit</a> <a class="delete" data-id="{{ id }}" href="#">delete</a></li>
